Fix tileset spillage

--- a/src/layout/feature-tileset.sass
+++ b/src/layout/feature-tileset.sass
@@ -22,6 +22,7 @@ div.qbo-feature-tile
       margin-bottom: 5px
 
 div.qbo-feature-tileset
+  width: 100%
   display: flex
   flex-direction: row
   flex-wrap: wrap
